--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,12 +8,28 @@
     <title>DWEC</title>
 </head>
 <body>
-    <header><h1>Ejercicios de Eventos</h1></header>
+    <p><h1>Ejercicios de JavaScript básico</h1></p>
+    <ul>
+        <li><a href="JavaScript Básico/Ejercicio1.html">Ejercicio 1</a></li>
+        <li><a href="JavaScript Básico/Ejercicio2.html">Ejercicio 2</a></li>
+        <li><a href="JavaScript Básico/Ejercicio3.html">Ejercicio 3</a></li>
+        <li><a href="JavaScript Básico/Ejercicio4.html">Ejercicio 4</a></li>
+        <li><a href="JavaScript Básico/Ejercicio5.html">Ejercicio 5</a></li>
+        <li><a href="JavaScript Básico/Ejercicio6.html">Ejercicio 6</a></li>
+        <li><a href="JavaScript Básico/Ejercicio7.html">Ejercicio 7</a></li>
+        <li><a href="JavaScript Básico/Ejercicio8.html">Ejercicio 8</a></li>
+        <li><a href="JavaScript Básico/Ejercicio9.html">Ejercicio 9</a></li>
+        <li><a href="JavaScript Básico/Ejercicio10.html">Ejercicio 10</a></li>
+        <li><a href="JavaScript Básico/Ejercicio11.html">Ejercicio 11</a></li>
+        <li><a href="JavaScript Básico/Ejercicio12.html">Ejercicio 12</a></li>
+        <li><a href="JavaScript Básico/Ejercicio13.html">Ejercicio 13</a></li>
+    </ul>
+    <p><h1>Ejercicios de Eventos</h1><p>
     <ul>
         <li><a href="Eventos/Ejercicio14.html">Ejercicio 14</a></li>
         <li><a href="Eventos/Ejercicio15.html">Ejercicio 15</a></li>
         <li><a href="Eventos/Ejercicio16.html">Ejercicio 16</a></li>
         <li><a href="Eventos/Ejercicio17.html">Ejercicio 17</a></li>
-    </ul>>
+    </ul>
 </body>
 </html>
